<resources>
    <string name="app_name">Digital ID</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypePassword">Re-type Password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="signUp">Sign up</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">DOB</string>
    <string name="countryOfOrigin">Country of Origin</string>
    <string name="selectCountry">Select Country</string>
    <string name="documentType">Document Type</string>
    <string name="selectDocumentType">Select document type</string>
    <string name="share">Share</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>

    <string name="newDocument">New Document</string>
    <string name="takeAphotoOfDocument">Take a photo of document</string>

    <string name="validate">Validate</string>
    <string name="account">Account</string>
    <string name="Italy">Italy</string>

    <string name="title_activity_add_user_scrolling">Sign up</string>
    <string name="yourUserHasBeenCreatedSuccessfully">Your user has been created successfully</string>
    <string name="weCouldntCreateYourUserTryAgain">We couldn\'t create your user, try again</string>

    <string name="userNameOrPasswordInvalid">Username or Password invalid</string>
    <string name="nameIsRequired">Name is required</string>
    <string name="lastnameIsRequired">Lastname is required</string>
    <string name="usernameIsRequired">Username is required</string>
    <string name="passwordIsRequired">Password is required</string>
    <string name="emailIsRequired">Email is required</string>
    <string name="retypePasswordIsRequired">Retype Password is required</string>

    <string name="passwordsDontMatch">Passwords do not match</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_home_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_validate">Validate</string>
    <string name="title_account">Account</string>

    <string name="changePassword">Change Password</string>
    <string name="setPascode">Set Passcode</string>
    <string name="biometricLogin">Biometric Login</string>
    <string name="logout">Log Out</string>
</resources>